# cpp-hft-arbitrage

./: .gitignore  ArbitrageEngine.cpp  ArbitrageEngine.h  CMakeLists.txt  ExchangeClient.cpp  ExchangeClient.h  MarketData.h  README.md  main.cpp  tests.cpp
